<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_game_settings_title">
        <SwitchPreference
            android:key="pref_sound_enabled"
            android:summary="@string/pref_sound_enabled_sum"
            android:title="@string/pref_sound_enabled_title"
            android:defaultValue="true"/>
        <Preference
            android:key="reset_game"
            android:summary="@string/pref_reset_game_sum"
            android:title="@string/pref_reset_game_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_about_title">
        <Preference
            android:key="about"
            android:summary="@string/pref_copyright"
            android:title="@string/pref_about_title" />
    </PreferenceCategory>
</PreferenceScreen>