<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ResultsFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="6dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/team_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/results_position"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/team_flag_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/results_team"
                app:layout_constraintStart_toEndOf="@+id/team_position"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider0"
                android:layout_width="1dp"
                android:layout_height="19dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/divider"
                app:layout_constraintEnd_toStartOf="@+id/team_played"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/team_played"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/results_abbr_matches_played"
                app:layout_constraintEnd_toStartOf="@+id/divider1"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider1"
                android:layout_width="1dp"
                android:layout_height="19dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/divider"
                app:layout_constraintEnd_toStartOf="@+id/team_score"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/team_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/results_abbr_points"
                app:layout_constraintEnd_toStartOf="@+id/divider2"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider2"
                android:layout_width="1dp"
                android:layout_height="19dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/divider"
                app:layout_constraintEnd_toStartOf="@+id/team_goal_difference"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/team_goal_difference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/results_abbr_goal_difference"
                app:layout_constraintEnd_toStartOf="@+id/divider3"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider3"
                android:layout_width="1dp"
                android:layout_height="19dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/divider"
                app:layout_constraintEnd_toStartOf="@+id/team_goals"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/team_goals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/results_abbr_goals"
                app:layout_constraintEnd_toStartOf="@+id/divider4"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider4"
                android:layout_width="1dp"
                android:layout_height="19dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/divider"
                app:layout_constraintEnd_toStartOf="@+id/team_counterpoints"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/team_counterpoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/results_abbr_counterpoints"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/results_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview" />

</android.support.constraint.ConstraintLayout>